--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -185,7 +185,7 @@ config:
           name: "&8» &cWroc"
           lore:
             - "&8» &7Kliknij aby wrocic do strony glownej"
-        actual-page:
+        current-page:
           material: SKULL_ITEM
           durability: 3
           name: "&8» &7Aktualna strona: &3{PAGE}/{PAGE-COUNT}"
