Cleanup, batch insert to database and insert od modified users

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,6 +10,7 @@ config:
       useSSL: true
       poolSize: 5
       connetionTimeout: 20000
+      batchLength: 1000
     sqlite:
       fileName: "data.sqlite"
     tableName: "peridrop_users"
